--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "date-fns": "^2.29.3",
+        "vee-validate": "^3.4.14",
         "vue-router": "^3.6.5",
         "vuex": "^3.6.2"
     }
