--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "date-fns": "^2.29.3",
         "vee-validate": "^3.4.14",
+        "vue-i18n": "^8.27.2",
         "vue-router": "^3.6.5",
         "vuex": "^3.6.2"
     }
