--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "date-fns": "^2.29.3",
         "vee-validate": "^3.4.14",
         "vue-router": "^3.6.5",
         "vuejs-paginate": "^2.1.0"
