--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "date-fns": "^2.29.3",
         "vee-validate": "^3.4.14",
         "vue-router": "^3.6.5",
-        "vuejs-paginate": "^2.1.0"
+        "vuejs-paginate": "^2.1.0",
+        "vuex": "^3.6.2"
     }
 }
