--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "date-fns": "^2.29.3",
         "vee-validate": "^3.4.14",
+        "vue-notification": "^1.3.20",
         "vue-router": "^3.6.5",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.6.2"
