--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/vue-fontawesome": "^2.0.9",
         "date-fns": "^2.29.3",
         "vee-validate": "^3.4.14",
         "vue-router": "^3.6.5",
