--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "date-fns": "^2.29.3",
         "vee-validate": "^3.4.14",
         "vue-router": "^3.6.5",
+        "vue-scrollto": "^2.20.0",
         "vue-toasted": "^1.1.28",
         "vuejs-paginate": "^2.1.0",
         "vuex": "^3.6.2"
