--- a/composer.json
+++ b/composer.json
@@ -11,22 +11,25 @@
         "php": "^7.2.5|^8.0",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "^4.4",
-        "laravel/framework": "^6.20.26",
+        "laravel/framework": "^7.0",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "1.*"
+        "laravel/ui": "2.*"
     },
     "require-dev": {
-        "facade/ignition": "^1.16.15",
+        "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
-        "laravel/ui": "1.x",
+        "laravel/ui": " 2.x",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
+        "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.2.5"
+        }
     },
     "extra": {
         "laravel": {
