--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "laravel/ui": "^3.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "config": {
         "optimize-autoloader": true,
